--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Ibrahim Kanber",
   "license": "MIT",
   "dependencies": {
+    "nodemon": "^2.0.6",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
